@@ -15,10 +15,9 @@ copyright_year   = 2009
 
 [AutoPrereqs]
 :version = 5.0
-
 skip = ^DZPA::Skip
+
 [MetaYAML]
-version = 2
 
 [Encoding / WithDescription]
 :version = 5.0
