@@ -11,8 +11,6 @@ copyright_year   = 2009
 [ExecDir]
 [AutoPrereqs]
 skip = ^DZPA::Skip
-[MetaYAML]
-version = 2
 
 [Encoding]
 encoding = bytes
