@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - restrict [MetaYAML] to metaspec v1.4, [MetaJSON] to v2.0+, as other
+          version combinations are not well-supported by the toolchain
 
 6.006     2016-07-04 10:56:36-04:00 America/New_York
         - add some documentation to Dist::Zilla::App::Tester (thanks, Alberto
